--- a/gentoo/portage/repos.conf
+++ b/gentoo/portage/repos.conf
@@ -2,7 +2,7 @@
 main-repo = gentoo
 
 [gentoo]
-location = /usr/portage
+location = /var/db/repos/gentoo
 sync-type = rsync
 sync-uri = rsync://rsync.gentoo.org/gentoo-portage
 auto-sync = yes
