--- a/.github/workflows/prototype.yml
+++ b/.github/workflows/prototype.yml
@@ -22,6 +22,7 @@ on:
     # every Sunday
     - cron:  '0 0 * * 0'
 
+
 jobs:
   build:
     strategy:
@@ -45,6 +46,10 @@ jobs:
         run: |
           docker build -t ${{ matrix.image }} ${{ matrix.image }}/
 
+      - name: Get the base image version
+        run: |
+          docker image inspect --format
+
       - name: Tag the docker image
         run: |
           docker tag ${{ matrix.image }} ghcr.io/${{ github.repository_owner }}/root:${{ matrix.image }}
@@ -60,3 +65,20 @@ jobs:
             echo "Skipping deploy no secrets present";
           fi
 
+      - name: Update README with links to new Dockerfiles
+        run: |
+          newversion="VERSION"
+          name=${{ matrix.image }}
+          base_url=https://github.com/${{ github.repository }}
+
+          # ubuntu and fedora has somewhat different names in the README
+          case $name in
+          	ubuntu)
+          		name="ubuntu22.04"
+          		;;
+          	fedora)
+          		name="fedora34"
+          		;;
+          esac
+          
+          sed -i "/<!--$name-->/a * [\`$newversion-$name\`]($base_url\/blob\/$newversion-$name\/$name\/Dockerfile)" updatedREADME.md
