--- a/gentoo/portage/make.conf
+++ b/gentoo/portage/make.conf
@@ -3,13 +3,17 @@ CXXFLAGS="${CFLAGS}"
 CHOST="x86_64-pc-linux-gnu"
 
 # containers and sandbox don't work well together
-FEATURES="-news -sandbox -usersandbox"
+#FEATURES="-news -sandbox -usersandbox"
+FEATURES="-news"
 
-PYTHON_SINGLE_TARGET="python3_6"
-PYTHON_TARGETS="python3_6 python2_7"
+PYTHON_SINGLE_TARGET="python3_8"
+#PYTHON_TARGETS="python3_6 python2_7"
 
 VIDEO_CARDS=""
 
 CPU_FLAGS_X86="mmx mmxext popcnt sse sse2 sse3 sse4_1 sse4_2 ssse3"
 
 USE="bindist dbus gif jpeg json perl png python sqlite svg tiff truetype xml"
+ACCEPT_LICENSE="*"
+ACCEPT_KEYWORDS="~amd64"
+USE="python_targets_python3_8 gif jpeg png tiff"
